# python-project-52

./: .coverage  .gitignore  Empty_db_copy.sqlite3  Makefile  README.md  build.sh  db copy.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: django-ci.yml  pyci.yml  pycy.yml
task_manager/: __init__.py  ext_mixins.py  forms.py  mixins.py  settings.py  test.py  urls.py  views.py
task_manager/fixtures/: labels.json  tasks.json  users.json
task_manager/fixtures copy_delete/: statuses.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filter.py  filter____.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: ___Delete_create_task copy.html  base.html  create_label.html  create_status.html  create_task.html  create_user.html  delete_label.html  delete_status.html  delete_task.html  delete_user.html  index.html  index__.html  labels.html  list_labels.html  list_statuses.html  list_tasks.html  list_users.html  login.html  page_task.html  reg_users.html  statuses.html  tasks.html  update_label.html  update_task.html  update_user.html  users.html  users_list.html
task_manager/templates/errors/: 404.html  500.html
task_manager/templates/labels/: create_label.html  (+2 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+12 files in other folders)
