[tool.poetry]
name = "hexlet-code"                        
version = "0.1.0"
description = "project task_manager"
authors = ["Dmitriy G. <llogginn@gmail.com>"]
repository = "https://github.com/braimm/python-project-52"
readme = "README.md"
packages = [{ include = "task_manager" },]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-bootstrap5 = "^24.2"
whitenoise = "^6.7.0"
dj-database-url = "^2.2.0"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
